// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header render correctly 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        Array [
          Object {
            "color": "whitesmoke",
            "fontSize": 35,
          },
          undefined,
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Object {
          "color": "whitesmoke",
          "fontSize": 18,
          "fontWeight": "bold",
          "marginLeft": 10,
        }
      }
    >
      My ToDo App
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "whitesmoke",
          "fontSize": 16,
          "fontWeight": "600",
          "marginLeft": 10,
        }
      }
    >
      Tasks: 
      0
    </Text>
    <Text
      style={
        Object {
          "color": "whitesmoke",
          "fontSize": 16,
          "fontWeight": "600",
          "marginLeft": 10,
        }
      }
    >
      Completed: 
      0
    </Text>
  </View>
</View>
`;

exports[`Priority render correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "marginLeft": 40,
      "marginTop": 5,
    }
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "#BD1302",
          "fontSize": 18,
        },
        undefined,
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      Object {
        "marginLeft": 10,
      }
    }
  >
    High Priority
  </Text>
</View>
`;
